--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <a target="_blank" href="" class="inactive">
                         <li><img src="js/assets/img/css.svg" alt="JS" class="invert" /> - JavaScript</li>
                     </a>
-                    <a target="_blank" href="https://infojrufba.github.io/g/html" class="inactive">
+                    <a target="_blank" href="https://infojrufba.github.io/g/html">
                         <li><img src="html/assets/img/html.svg" alt="HTML" class="invert" /> - Hypertext Marckup Language</li>
                     </a>
                     <a target="_blank" href="" class="inactive">
