--- a/ionic/index.html
+++ b/ionic/index.html
@@ -174,7 +174,7 @@
                 <a href="http://ionicframework.com/docs/">ionicframework.com/docs/</a>
             </div>
             <div class="image">
-                <img src="assets/img/wm.png" alt="" />
+                <img src="../assets/img/wm.png" alt="Silhueta de rosto de mulher" />
             </div>
         </section>
         <footer>
