--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <title>Guias de Estudo</title>
     </head>
     <body>
-        <section class="center full blue">
+        <section class="center blue">
             <h1>Guias de estudo da InfoJr UFBA</h1>
             <p>
                 Estes materiais foram preparados com a finalidade de iniciar e direcionar o estudo das ferramentas, padrões e tecnologias utilizados pela InfoJr UFBA no desenvolvimento de seus projetos.
@@ -37,7 +37,7 @@
                         <li><img src="js/assets/img/css.svg" alt="JS" class="invert" /> - JavaScript</li>
                     </a>
                     <a target="_blank" href="https://infojrufba.github.io/g/html">
-                        <li><img src="html/assets/img/html.svg" alt="HTML" class="invert" /> - Hypertext Marckup Language</li>
+                        <li><img src="html/assets/img/html5.png" alt="HTML" /> - Hypertext Marckup Language</li>
                     </a>
                     <a target="_blank" href="" class="inactive">
                         <li><img src="css/assets/img/css.svg" alt="CSS" class="invert" /> - Cascade StyleSheet</li>
