Inicia guia de RegEx

--- a/index.html
+++ b/index.html
@@ -54,12 +54,15 @@
                     <a target="_blank" href="https://infojrufba.github.io/g/ionic">
                         <li><img src="ionic/assets/img/ionic-logo-blue.png" alt="Ionic" /> - framework for building amazing mobile apps. </li>
                     </a>
+                    <a target="_blank" href="https://infojrufba.github.io/g/regex" class="inactive">
+                        <li>RegEx - Reg[ular] Ex[pression]!</li>
+                    </a>
                 </ul>
             </div>
         </section>
         <footer>
             <p>
-                © InfoJr UFBA - 2016
+                © InfoJr UFBA - 2016 - 2017
             </p>
         </footer>
     </body>
