Corrige erro de digitação

--- a/html/index.html
+++ b/html/index.html
@@ -72,7 +72,7 @@
                 Exatamente. Não faz muito sentido se não for explicado...
             </p>
             <p>
-                Metadados são dados sobre os dados. É isso aí. Eles não serão exibidos nas páginas, mas serão interpretados e dirão coisas para quem os iterpretar (navegadores, mecanismos de busca, e outros serviços).
+                Metadados são dados sobre os dados. É isso aí. Eles não serão exibidos nas páginas, mas serão interpretados e dirão coisas para quem os interpretar (navegadores, mecanismos de busca, e outros serviços).
             </p>
         </section>
         <section class="wini">
@@ -173,7 +173,7 @@
                 <li>
                     <b>form - </b>É a tag responsável por criar formulários.
                     <ul>
-                        <li><b>method</b> - Atributo que determina por qual método HTTP um formulário vai ser enviado. As opções são GET e POST. O padrão é GET.</li>
+                        <li><b>method</b> - Atributo que determina por qual método HTTP um formulário vai ser enviado. As opções são GET e POST. Caso não seja especificado, o método utilizado será GET.</li>
                         <li><b>action</b> - Determina para onde as informações do formulário serão enviadas. Normalmente é o endereço de um arquivo de controlador. Ex: "controllers/user_controller.php"</li>
                     </ul>
                 </li>
