Corrige erros de digitação
http://brasilescola.uol.com.br/gramatica/por-que.htm

--- a/ionic/index.html
+++ b/ionic/index.html
@@ -31,9 +31,9 @@
             <div class="text">
                 <h1>Vamos começar as coisas com ionic, né?</h1>
                 <p>Se você nunca desenvolveu para mobile, talvez esse guia seja de grande ajuda. Uma das perguntas que você pode estar a se fazer é: O Ionic é a melhor opção? A resposta é NÃO! O Ionic não consegue aproveitar os recursos dos dispositivos Mobile como os Aplicativos Nativos. O que significa que se seu interesse está no melhor desempenho possível, o Ionic, infelizmente, não é a resposta.<p>
-                <h1>E por quê eu deveria utilizar Ionic?</h1>
+                <h1>E por que eu deveria utilizar Ionic?</h1>
                 <p>
-                  Bom, a princípio, por praticidade. O Ionic vai permmitir que com apenas 1 codebase, você compile aplicativos para os principais sistemas operacionais do mercado. Um outro ponto positivo, se você é programador web, é que você não vai precisar aprender nada novo, Ionic é Web App, e utiliza TypeScript, HTML5, SCSS e Angular.
+                  Bom, a princípio, por praticidade. O Ionic vai permitir que com apenas 1 codebase, você compile aplicativos para os principais sistemas operacionais do mercado. Um outro ponto positivo, se você é programador web, é que você não vai precisar aprender nada novo, Ionic é Web App, e utiliza TypeScript, HTML5, SCSS e Angular.
                 </p>
             </div>
             <div class="image">
@@ -107,7 +107,7 @@
                 O app/module.ts é o portão de entrada, pae. Todas as páginas devem ser declaradas nesse arquivo, como no modelo que foi gerado quando você criou o app. Aqui definiu-se o component root como sendo a classe MyApp que se encontra em app.component.ts;
             </p>
             <p>
-                O app/app.component.ts é a primeira coisa que vai ser carregada no seu aplicativo. Entao se você quiser que alguma coisa execute primeiro, essa coisa deve ser escrita aqui. Como por exemplo, a configuração dinâmica do menu. Por falar em menu, ele está no arquivo app/app.html no nosso exemplo. O app/app.html é o template do nosso app.component.
+                O app/app.component.ts é a primeira coisa que vai ser carregada no seu aplicativo. Então se você quiser que alguma coisa execute primeiro, essa coisa deve ser escrita aqui. Como por exemplo, a configuração dinâmica do menu. Por falar em menu, ele está no arquivo app/app.html no nosso exemplo. O app/app.html é o template do nosso app.component.
             </p>
         </section>
         <section>
