--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="assets/css/manualTrainee.css">
-        <link rel="icon" type="image/png" href="assets/img/infojr-ico.svg">
+        <link rel="icon" type="image/svg" href="assets/img/infojr-ico.svg">
         <title>Guias de Estudo</title>
     </head>
     <body>
