--- a/html/index.html
+++ b/html/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="../assets/css/manualTrainee.css">
-        <link rel="icon" type="image/png" href="https://infojrufba.github.io/g/assets/img/infojr-ico.svg">
+        <link rel="icon" type="image/svg" href="https://infojrufba.github.io/g/assets/img/infojr-ico.svg">
         <title>Guias - HTML</title>
     </head>
     <body>
@@ -61,7 +61,7 @@
                 Sabe aqueles ícones que aparecem na aba de um navegador? Bom... Ela pode ser incluída assim. Na head.
             </p>
             <div class="code-block">
-                <code>&ltlink rel="icon" type="image/png" href="https://infojrufba.github.io/g/assets/img/infojr-ico.svg"&gt</code>
+                <code>&ltlink rel="icon" type="image/svg" href="https://infojrufba.github.io/g/assets/img/infojr-ico.svg"&gt</code>
             </div>
             <h3>Você não achou estranho que, na seção anterior, a &ltmeta charset="utf-8"&gt não foi descrita?</h3>
             <p>
