--- a/crud/index.html
+++ b/crud/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="assets/css/manualTrainee.css">
-        <link rel="icon" type="image/png" href="assets/img/infojr-ico.svg">
+        <link rel="icon" type="image/ico" href="assets/img/infojr-ico.ico">
         <title>Guias - CRUD</title>
     </head>
     <body>
