--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                         <li><img src="mvc/assets/img/mvc.svg" alt="MVC" /> - A software architectural pattern</li>
                     </a>
                     <a target="_blank" href="" class="inactive">
-                        <li><img src="js/assets/img/css.svg" alt="JS" class="invert" /> - JavaScript</li>
+                        <li><img src="js/assets/img/js.png" alt="JS" class="invert" /> - JavaScript</li>
                     </a>
                     <a target="_blank" href="https://infojrufba.github.io/g/html">
                         <li><img src="html/assets/img/html5.png" alt="HTML" /> - Hypertext Marckup Language</li>
