--- a/html/index.html
+++ b/html/index.html
@@ -78,7 +78,7 @@
         <section class="wini">
             <h3>Exemplos</h3>
             <p>
-                As keyowrds ajudam a encontrarmos websites em mecanismos de busca.
+                As keywords ajudam a encontrarmos websites em mecanismos de busca.
             </p>
             <div class="code-block">
                 <code>
