--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="assets/css/manualTrainee.css">
-        <link rel="icon" type="image/ico" href="../assets/img/infojr-ico.ico">
+        <link rel="icon" type="image/ico" href="assets/img/infojr-ico.ico">
         <title>Guias de Estudo</title>
     </head>
     <body>
@@ -34,7 +34,7 @@
                         <li><img src="mvc/assets/img/mvc.svg" alt="MVC" /> - A software architectural pattern</li>
                     </a>
                     <a target="_blank" href="" class="inactive">
-                        <li><img src="js/assets/img/js.png" alt="JS" class="invert" /> - JavaScript</li>
+                        <li><img src="js/assets/img/css.png" alt="JS" class="invert" /> - JavaScript</li>
                     </a>
                     <a target="_blank" href="https://infojrufba.github.io/g/html">
                         <li><img src="html/assets/img/html5.png" alt="HTML" /> - Hypertext Marckup Language</li>
