Guia de responsividade

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     <a target="_blank" href="" class="inactive">
                         <li><img src="css/assets/img/css.svg" alt="CSS" class="invert" /> - Cascade StyleSheet</li>
                     </a>
-                    <a target="_blank" href="" class="inactive">
+                    <a target="_blank" href="responsividade/index.html">
                         <li><img src="rsp/assets/img/css.svg" alt="RSP" class="invert" /> - Responsividade</li>
                     </a>
                     <a target="" href="" class="inactive">
