Adiciona imagem de responsividade ao menu

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                         <li><img src="css/assets/img/css.svg" alt="CSS" class="invert" /> - Cascade StyleSheet</li>
                     </a>
                     <a target="_blank" href="responsividade/index.html">
-                        <li><img src="rsp/assets/img/css.svg" alt="RSP" class="invert" /> - Responsividade</li>
+                        <li><img src="responsividade/assets/img/responsividade.png" alt="RSP" class="invert" /> - Responsividade</li>
                     </a>
                     <a target="" href="" class="inactive">
                         <li><img src="poo/assets/img/poo.svg" alt="POO" class="invert" /> - Programação Orientada a Objetos (2º, 3º e 4º Pilar) - Refatorando seu projeto.</li>
