--- a/html/index.html
+++ b/html/index.html
@@ -212,7 +212,7 @@
                             <b>type - </b> Determina o tipo de ação executada pelo botão.
                             <ul>
                                 <li><b>submit - </b>Envia o formulário</li>
-                                <li><b>cancel - </b>Devolve os valores do formulário ao padrão. Se o padrão não for definido, será vazio.</li>
+                                <li><b>reset - </b>Devolve os valores do formulário ao padrão. Se o padrão não for definido, será vazio.</li>
                                 <li><b>button - </b>Não executa nenhuma ação. Útil para ações personalizadas com javascript.</li>
                             </ul>
                         </li>
