Atualização do link dos guias

--- a/index.html
+++ b/index.html
@@ -18,43 +18,43 @@
             </p>
             <div>
                 <ul class="menu">
-                    <a target="_blank" href="https://infojrufba.github.io/g/ilp">
+                    <a target="_blank" href="https://infojrufba.github.io/guias/ilp">
                         <li><img src="ilp/assets/img/ilp.svg" alt="ILP" class="invert" /> - Introdução à Lógica de Programação</li>
                     </a>
-                    <a target="_blank" href="https://infojrufba.github.io/g/mysql">
+                    <a target="_blank" href="https://infojrufba.github.io/guias/mysql">
                         <li><img src="mysql/assets/img/mysql.svg" alt="MySQL" /> - Modelando bancos de dados em MySQL</li>
                     </a>
-                    <a target="_blank" href="https://infojrufba.github.io/g/crud">
+                    <a target="_blank" href="https://infojrufba.github.io/guias/crud">
                         <li><img src="crud/assets/img/crud.svg" alt="CRUD" class="invert" /> - Operações básicas em bancos de dados</li>
                     </a>
-                    <a target="_blank" href="https://infojrufba.github.io/g/poo">
+                    <a target="_blank" href="https://infojrufba.github.io/guias/poo">
                         <li><img src="poo/assets/img/poo.svg" alt="POO" class="invert" /> - Programação Orientada a Objetos (1º Pilar)</li>
                     </a>
-                    <a target="_blank" href="https://infojrufba.github.io/g/mvc">
+                    <a target="_blank" href="https://infojrufba.github.io/guias/mvc">
                         <li><img src="mvc/assets/img/mvc.svg" alt="MVC" /> - A software architectural pattern</li>
                     </a>
                     <a target="_blank" href="" class="inactive">
                         <li><img src="js/assets/img/css.png" alt="JS" class="invert" /> - JavaScript</li>
                     </a>
-                    <a target="_blank" href="https://infojrufba.github.io/g/html">
+                    <a target="_blank" href="https://infojrufba.github.io/guias/html">
                         <li><img src="html/assets/img/html5.png" alt="HTML" /> - Hypertext Marckup Language</li>
                     </a>
                     <a target="_blank" href="" class="inactive">
                         <li><img src="css/assets/img/css.svg" alt="CSS" class="invert" /> - Cascade StyleSheet</li>
                     </a>
-                    <a target="_blank" href="https://infojrufba.github.io/g/responsividade">
+                    <a target="_blank" href="https://infojrufba.github.io/guias/responsividade">
                         <li><img src="responsividade/assets/img/responsividade.png" alt="RSP" class="invert" /> - Responsividade</li>
                     </a>
                     <a target="" href="" class="inactive">
                         <li><img src="poo/assets/img/poo.svg" alt="POO" class="invert" /> - Programação Orientada a Objetos (2º, 3º e 4º Pilar) - Refatorando seu projeto.</li>
                     </a>
-                    <a target="_blank" href="https://infojrufba.github.io/g/sass">
+                    <a target="_blank" href="https://infojrufba.github.io/guias/sass">
                         <li><img src="sass/assets/img/sass.svg" alt="SASS" /> - CSS com super-poderes!</li>
                     </a>
-                    <a target="_blank" href="https://infojrufba.github.io/g/ionic">
+                    <a target="_blank" href="https://infojrufba.github.io/guias/ionic">
                         <li><img src="ionic/assets/img/ionic-logo-blue.png" alt="Ionic" /> - framework for building amazing mobile apps. </li>
                     </a>
-                    <a target="_blank" href="https://infojrufba.github.io/g/regex" class="inactive">
+                    <a target="_blank" href="https://infojrufba.github.io/guias/regex" class="inactive">
                         <li>RegEx - Reg[ular] Ex[pression]!</li>
                     </a>
                 </ul>
