--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     <a target="_blank" href="https://infojrufba.github.io/guias/mvc">
                         <li><img src="mvc/assets/img/mvc.svg" alt="MVC" /> - A software architectural pattern</li>
                     </a>
-                    <a target="_blank" href="https://infojrufba.github.io/guias/js" class="inactive">
+                    <a target="_blank" href="https://infojrufba.github.io/guias/js">
                         <li><img src="js/assets/img/css.png" alt="JS" class="invert" /> - JavaScript</li>
                     </a>
                     <a target="_blank" href="https://infojrufba.github.io/guias/html">
