--- a/index.html
+++ b/index.html
@@ -57,6 +57,9 @@
                     <a target="_blank" href="https://infojrufba.github.io/guias/regex" class="inactive">
                         <li>RegEx - Reg[ular] Ex[pression]!</li>
                     </a>
+                    <a target="_blank" href="Web/index.html">
+                        <li><img src="Web/assets/img/web.png" alt="Ionic" /> - O Maravilhoso mundo da Web </li>
+                    </a>
                 </ul>
             </div>
         </section>
